# sudoku

./: Australia.cxx  Australia.hxx  CMakeLists.txt  Constraint.cxx  Constraint.hxx  sudoku-mrv.py  sudoku.cxx  sudoku.py  sudoku.txt
